# django-user-sessions-ng

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
django_user_sessions_ng/: __init__.py  apps.py  geoip.py  middleware.py  models.py
django_user_sessions_ng/management/commands/: download_geoip_db.py
django_user_sessions_ng/migrations/: 0001_initial.py
src/django_user_sessions_ng/: admin.py  apps.py  geoip.py  middleware.py  models.py
src/django_user_sessions_ng/backends/: __init__.py  cached_db.py  db.py
src/django_user_sessions_ng/management/commands/: download_geoip_db.py
src/django_user_sessions_ng/migrations/: 0001_initial.py
src/tests/: conftest.py  settings.py  test_clearsessions.py  test_middleware.py  test_models.py  test_session_store.py
tests/: conftest.py  settings.py  test_session_store.py  urls.py
